--- a/static/index.html
+++ b/static/index.html
@@ -35,11 +35,15 @@
 <body class="modal-body">
     <h1 class="h1">Officer's Dashboard</h1>
     <!-- <div id="dropdown-main" class="dropdown-head"></div> -->
-    <div id="container"></div>
-</br>
-    <div>
-        <button id="generate">Select</button>
-    </div>
+    
+    
+    <table>
+        <tr>
+            <td><h3><div id="container"></div></h3></td>
+            <td> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
+            <td><h3><div id="generate"></div></h3></td>
+        </tr>
+    </table>
 
     <div id="main-ele" class="table-bordered">
 
